--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "tsc && vite build",
     "prod": "vite preview",
     "upload": "npm run build && upload-wa-map",
-    "upload-only": "upload-wa-map"
+    "upload-only": "upload-wa-map",
+    "deploy": "npm run build && aws s3 sync ./dist s3://wa-map-devclub --delete && aws cloudfront create-invalidation --distribution-id E2L8UEFKXPDISL --paths '/*'"
   },
   "devDependencies": {
     "@types/node": "^18.15.11",
